Added SearchBar and work with api

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,7 +1,7 @@
-$background-color: #ffffff;
+@import '../../variables';
 
 footer {
-  background-color: $background-color;
+  background-color: $footer-background;
   bottom: 0;
 }
 
