--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -9,5 +9,8 @@ $primary: #f17900;
 $gray: #393939;
 $gray-light: rgba(57, 57, 57, 0.5);
 $search-background: rgba(57, 57, 57, 0.05);
-$footer-background: #ffffff;
+$white: #ffffff;
 $main-background: #fafafa;
+$border: #F0F1F1;
+$unfavorite-background: #F9F9F9;
+$favorite-background: rgba(251, 215, 178, 0.3);
