--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -26,3 +26,15 @@ h1 {
 main {
   background-color: $main-background;
 }
+
+.search-result {
+  margin-top: 60px;
+}
+
+.gallery {
+  margin-top: 120px;
+}
+
+.gallery-small {
+  margin-top: 120px;
+}
