--- a/src/style.scss
+++ b/src/style.scss
@@ -3,10 +3,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
-html,
-body {
+* {
   font-family: 'Lexend Deca', sans-serif;
   color: $gray;
   margin: 0;
   padding: 0;
+  text-decoration: none;
 }
