--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -11,6 +11,6 @@ $gray-light: rgba(57, 57, 57, 0.5);
 $search-background: rgba(57, 57, 57, 0.05);
 $white: #ffffff;
 $main-background: #fafafa;
-$border: #F0F1F1;
-$unfavorite-background: #F9F9F9;
+$border: #f0f1f1;
+$unfavorite-background: #f9f9f9;
 $favorite-background: rgba(251, 215, 178, 0.3);
