Added Small Card List and finished Home page

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -8,6 +8,6 @@ footer {
 .footer-wrapper {
   display: flex;
   justify-content: space-between;
-  padding: 32px 320px 0 320px;
+  padding: 32px 320px;
   align-items: center;
 }
