--- a/src/components/SmallCardList/SmallCardList.scss
+++ b/src/components/SmallCardList/SmallCardList.scss
@@ -1,16 +1,13 @@
-.card-list {
+.small-card-list {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  column-gap: 50px;
-  row-gap: 20px;
+  column-gap: 16px;
+  row-gap: 16px;
 }
 
-.card-list-wrapper {
+.small-card-list-wrapper {
   width: 80%;
   margin: 40px auto 0;
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
 }
