--- a/src/components/Loader/Loader.scss
+++ b/src/components/Loader/Loader.scss
@@ -1,11 +1,11 @@
-ul {
+.loader {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	margin-top: 30px;
 }
 
-ul li {
+.dot {
 	list-style: none;
 	width: 20px;
 	height: 20px;
@@ -30,22 +30,22 @@ ul li {
 	}
 }
 
-ul li:nth-child(1) {
+.dot:nth-child(1) {
 	animation-delay: 0s;
 }
 
-ul li:nth-child(2) {
+.dot:nth-child(2) {
 	animation-delay: 0.2s;
 }
 
-ul li:nth-child(3) {
+.dot:nth-child(3) {
 	animation-delay: 0.4s;
 }
 
-ul li:nth-child(4) {
+.dot:nth-child(4) {
 	animation-delay: 0.6s;
 }
 
-ul li:nth-child(5) {
+.dot:nth-child(5) {
 	animation-delay: 0.8s;
 }
