--- a/src/components/CardList/CardList.scss
+++ b/src/components/CardList/CardList.scss
@@ -8,9 +8,21 @@
 }
 
 .card-list-wrapper {
-	width: 80%;
+	padding: 0 320px;
 	margin: 40px auto 0;
 	display: flex;
 	flex-direction: column;
-	gap: 30px;
+
+	@media (max-width: 1700px) {
+		padding: 0 160px;
+	}
+
+	@media (max-width: 1100px) {
+		padding: 0 100px;
+	}
+
+	@media (max-width: 700px) {
+		padding: 0 20px;
+		align-items: center;
+	}
 }
