--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -10,4 +10,13 @@ footer {
 	justify-content: space-between;
 	padding: 32px 320px;
 	align-items: center;
+
+	@media (max-width: 1200px) {
+		padding: 32px 10% 0 10%;
+	}
+
+	@media (max-width: 500px) {
+		flex-direction: column;
+		gap: 20px;
+	}
 }
