--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -12,6 +12,10 @@ header {
 	justify-content: space-between;
 	padding: 32px 320px 0 320px;
 	align-items: center;
+
+	@media (max-width: 1200px) {
+		padding: 32px 10% 0 10%;
+	}
 }
 
 nav {
@@ -33,6 +37,10 @@ nav {
 	text-align: left;
 	color: #ffffff;
 	margin: 0;
+
+	@media (max-width: 600px) {
+		display: none;
+	}
 }
 
 .nav-link:hover {
