--- a/src/pages/Favorites/Favorites.scss
+++ b/src/pages/Favorites/Favorites.scss
@@ -16,6 +16,10 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+
+	@media (max-width: 500px) {
+		margin-top: 60px;
+	}
 }
 
 .favorites-list {
@@ -24,4 +28,8 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+
+	@media (max-width: 500px) {
+		margin-top: 60px;
+	}
 }
